# waseem-django-template

./: .cookiecutterignore  .gitignore  .pre-commit-config.yaml  cookiecutter.json  package-lock.json  pyproject.toml
{{cookiecutter.project_name}}/: .cookiecutterignore  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  .secrets.baseline  AGENTS.md  Dockerfile  README.md  design.md  development.yml  docker-entrypoint.sh  env.py  env_template.txt  gunicorn_config.py  justfile  manage.py  mkdocs.yml  package-lock.json  package.json  postcss.config.cjs  prettier.config.cjs  production.yml  pyproject.toml  pyrightconfig.json  ruff.toml  setup.cfg  tailwind.config.cjs  tsconfig.json  uvicorn.sh  vite.config.js
{{cookiecutter.project_name}}/app/: admin.py  apps.py  asgi.py  auth.py  celery.py  celeryconfig.py  conftest.py  context_processors.py  middleware.py  permissions.py  request.py  schema.py  telemetry.py  types.py  urls.py  utils.py  wsgi.py
{{cookiecutter.project_name}}/app/account/: admin.py  forms.py  models.py  urls.py  views.py
{{cookiecutter.project_name}}/app/admin/: __init__.py  user.py
{{cookiecutter.project_name}}/app/admin/account/: user.py
{{cookiecutter.project_name}}/app/allauth/: adapter.py
{{cookiecutter.project_name}}/app/helpers/: dict.py  django_models.py  list.py  network.py  object.py  paginators.py  string.py
{{cookiecutter.project_name}}/app/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/app/models/: __init__.py  api_key.py  base.py
{{cookiecutter.project_name}}/app/models/account/: api_key.py
{{cookiecutter.project_name}}/app/settings/: __init__.py  base.py  dev.py  flags.py  prod.py  test.py  vars.py
{{cookiecutter.project_name}}/app/settings/components/: allauth.py  auth.py  aws.py  caches.py  common.py  cprofile.py  csp.py  database.py  dbbackup.py  debug_toolbar.py  djfk.py  emails.py  health_check.py  logging.py  mjml.py  nplusone.py  pyinstrument.py  rate_limit.py  rest_framework.py  security.py  sentry.py  silk.py  static.py  storages.py  unfold.py  vite.py
{{cookiecutter.project_name}}/app/templates/: base.html  home.html
{{cookiecutter.project_name}}/app/templates/account/: login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
{{cookiecutter.project_name}}/app/templates/cotton/: README.md
{{cookiecutter.project_name}}/app/templates/email/: base.html
{{cookiecutter.project_name}}/app/templates/errors/: 403.html  404.html  500.html
{{cookiecutter.project_name}}/app/templatetags/: bold_for.py  form_fields.py  load_js.py  trim.py
{{cookiecutter.project_name}}/app/tests/: test_account_routes.py  test_account_views.py  test_core.py  test_models.py  test_templatetags.py  test_validators.py
{{cookiecutter.project_name}}/app/tests/test_helpers/: test_network.py  test_object.py  test_paginators.py  test_string.py
{{cookiecutter.project_name}}/app/validators/: file_validators.py
{{cookiecutter.project_name}}/app/views/: home.py
{{cookiecutter.project_name}}/assets/: alpine.ts  alpinejs__collapse.d.ts  error_page.ts  flowbite.ts  formset.ts  global.d.ts  htmx.ts  main.css  main.ts  modal.ts  ryangjchandler__alpine-tooltip.d.ts  utils.ts
{{cookiecutter.project_name}}/compose/production/app/: Dockerfile  entrypoint  gunicorn_config.py  (+1 more)
{{cookiecutter.project_name}}/config/: urls.py  wsgi.py
{{cookiecutter.project_name}}/docker/app/: Dockerfile
{{cookiecutter.project_name}}/docker/aws/: Dockerfile
{{cookiecutter.project_name}}/docker/postgres/: Dockerfile
{{cookiecutter.project_name}}/docs/: deployment.md  index.md  observability.md  quickstart.md  settings.md
{{cookiecutter.project_name}}/env/: env_template.txt
{{cookiecutter.project_name}}/frontend/css/: base.scss
{{cookiecutter.project_name}}/frontend/js/: components.ts  global.d.ts  main.ts  ryangjchandler__alpine-tooltip.d.ts  utils.ts
{{cookiecutter.project_name}}/frontend/shared/: alpine.ts  global.d.ts  main.ts  modal.ts
{{cookiecutter.project_name}}/observability/: otel-collector.yaml
{{cookiecutter.project_name}}/scripts/local/: backup  restore  setup_project  up  upx
{{cookiecutter.project_name}}/scripts/production/: deploy.py
{{cookiecutter.project_name}}/server/: asgi.py  celery.py  celeryconfig.py  middleware.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/server/settings/: __init__.py  storage_backends.py
{{cookiecutter.project_name}}/shared/: string.py
{{cookiecutter.project_name}}/shared/validators/: file_validators.py
{{cookiecutter.project_name}}/src/: apps.py  asgi.py  auth.py  celery.py  celeryconfig.py  request.py  schema.py  urls.py  utils.py  wsgi.py
{{cookiecutter.project_name}}/src/admin/: user.py
{{cookiecutter.project_name}}/src/allauth/: adapter.py
{{cookiecutter.project_name}}/src/models/: base.py
{{cookiecutter.project_name}}/src/settings/: __init__.py
{{cookiecutter.project_name}}/src/templatetags/: bold_for.py  load_js.py
{{cookiecutter.project_name}}/src/validators/: file_validators.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: apps.py  asgi.py  auth.py  celery.py  celeryconfig.py  context_processors.py  permissions.py  request.py  schema.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/admin/: user.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/allauth/: adapter.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/helpers/: string.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/models/: user.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/settings/: __init__.py  vars.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/templates/: base.html
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/templatetags/: __init__.py  bold_for.py  load_js.py  replace.py  trim.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/views/: home.py
(+243 files in other folders)
