[tool.poetry]
name = "waaklabs-django-template"
version = "0.1.0"
description = "Django template used for WAAK Labs"
authors = ["Waseem akram <waseem07799@gmail.com>"]
readme = "README.md"
packages = [{include = "waaklabs_django_template"}]

[tool.poetry.dependencies]
python = "3.11"
cookiecutter = "^2.1.1"
jinja2-git = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
