[tool.poetry]
name = "waaklabs-django-template"
version = "0.1.0"
description = "git remote add origin https://github.com/devwaseem/waaklabs-django-template.git"
authors = ["Waseem akram <waseem07799@gmail.com>"]
readme = "README.md"
packages = [{include = "waaklabs_django_template"}]

[tool.poetry.dependencies]
python = "3.11"
cookiecutter = "^2.1.1"
jinja2-git = "^1.3.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
