[tool.poetry]
name = "waaklabs-django-template"
version = "0.1.0"
description = "git remote add origin https://github.com/devwaseem/waaklabs-django-template.git"
authors = ["Waseem akram <waseem07799@gmail.com>"]
readme = "README.md"
packages = [{include = "waaklabs_django_template"}]

[tool.poetry.dependencies]
python = "3.11.2"
cookiecutter = "^2.1.1"
jinja2-git = "^1.3.0"
pre-commit = "^3.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pylint = "^2.17.2"
pylint-django = "^2.5.3"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}


[tool.poetry.group.local.dependencies]
djlint = "^1.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
